--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/suhyeonmarina/a2/blob/main/seq2seq.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install -U datasets huggingface_hub"
@@ -12,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "COXEhZ9NvfL0"
       },
@@ -194,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "7M7nu9jUvfL3"
       },
@@ -208,7 +218,6 @@
         "    \"lr\": 1e-4,\n",
         "    \"warmup_steps\": 50,\n",
         "    \"device\": \"cuda\" if torch.cuda.is_available() else \"cpu\",\n",
-        "\n",
         "    \"gradient_accumulate_steps\": 1,\n",
         "}"
       ]
@@ -224,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -393,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -734,7 +743,7 @@
         "        # gaussian_penalty: (batch, window_size * 2 + 1)\n",
         "        ######\n",
         "\n",
-        "        ## YOUR CODES 내일 여기 부터 복습!!!!!!!!!!!🫵\n",
+        "        ## YOUR CODES\n",
         "        # decoder로부터 현재 시점의 중심 위치 예측\n",
         "        hidden = self.location_proj_up(decoder_hidden_query)              # (B, hidden_dim)\n",
         "        hidden = torch.tanh(hidden)\n",
@@ -808,6 +817,30 @@
         "        ######\n",
         "\n",
         "        ## YOUR CODES\n",
+        "        # 1. 시퀀스 길이 계산\n",
+        "        lengths = attention_mask.sum(dim=1).cpu()\n",
+        "\n",
+        "        # 2. 패킹: RNN이 불필요한 PAD 토큰을 계산하지 않게 하기 위해 실제 데이터 길이만큼 계산하도록 만들어줌\n",
+        "        packed_input = nn.utils.rnn.pack_padded_sequence(\n",
+        "            input_embeds, lengths, batch_first=True, enforce_sorted=False\n",
+        "        )\n",
+        "\n",
+        "        # 3. LSTM 통과\n",
+        "        packed_output, (h, c) = self.encoder(packed_input)\n",
+        "\n",
+        "        # 4. 다시 unpack\n",
+        "        encoder_output, _ = nn.utils.rnn.pad_packed_sequence(\n",
+        "            packed_output, batch_first=True\n",
+        "        )  # shape: (batch, src_seq_len, hidden_dim * 2)\n",
+        "\n",
+        "        # 5. Bidirectional LSTM → decoder용 hidden state로 변환\n",
+        "        # h, c: (num_layers * 2, batch, encoder_hidden_dim) → 2 방향 concat\n",
+        "        h = torch.cat([h[-2], h[-1]], dim=-1)  # (batch, hidden_dim * 2)\n",
+        "        c = torch.cat([c[-2], c[-1]], dim=-1)\n",
+        "\n",
+        "        # 6. decoder에 맞게 projection\n",
+        "        h_enc = self.h_dec_proj(h).unsqueeze(0)  # (1, batch, decoder_hidden_dim)\n",
+        "        c_enc = self.c_dec_proj(c).unsqueeze(0)\n",
         "\n",
         "        ######\n",
         "\n",
@@ -877,6 +910,17 @@
         "            ######\n",
         "\n",
         "            ## YOUR CODES\n",
+        "            if self.config.do_input_feeding:\n",
+        "                rnn_input = torch.cat([decoder_input_embeds[:, t:t+1], prev_attn_context], dim=-1)\n",
+        "            else:\n",
+        "                rnn_input = decoder_input_embeds[:, t:t+1]\n",
+        "\n",
+        "            decoder_output, attn_context, (current_h_dec, current_c_dec) = self.decoder(\n",
+        "                rnn_input, encoder_outputs, current_h_dec, current_c_dec, attention_mask\n",
+        "            )\n",
+        "\n",
+        "            prev_attn_context = attn_context  # 다음 timestep에 전달\n",
+        "\n",
         "\n",
         "            ######\n",
         "            outputs.append(decoder_output)\n",
@@ -919,6 +963,39 @@
         "           ######\n",
         "\n",
         "            ## YOUR CODES\n",
+        "            # decoder input의 임베딩\n",
+        "            decoder_input_embeds = self.embedding(decoder_input_ids[:, -1:])  # 마지막 토큰만\n",
+        "\n",
+        "            if cache is None:\n",
+        "                encoder_input_embeds = self.embedding(encoder_input_ids)\n",
+        "                encoder_outputs, (h_enc, c_enc) = self.encoder(encoder_input_embeds, encoder_attention_mask)\n",
+        "                current_h_dec, current_c_dec = h_enc, c_enc\n",
+        "                prev_attn_context = torch.zeros((batch_size, 1, self.config.decoder_hidden_dim), device=device)\n",
+        "            else:\n",
+        "                encoder_outputs, current_h_dec, current_c_dec, prev_attn_context = cache\n",
+        "\n",
+        "            if self.config.do_input_feeding:\n",
+        "                rnn_input = torch.cat([decoder_input_embeds, prev_attn_context], dim=-1)\n",
+        "            else:\n",
+        "                rnn_input = decoder_input_embeds\n",
+        "\n",
+        "            decoder_output, attn_context, (current_h_dec, current_c_dec) = self.decoder(\n",
+        "                rnn_input, encoder_outputs, current_h_dec, current_c_dec, encoder_attention_mask\n",
+        "            )\n",
+        "\n",
+        "            logits = self.lm_head(decoder_output)\n",
+        "            next_token = logits[:, -1, :].argmax(dim=-1, keepdim=True)\n",
+        "\n",
+        "            next_token = next_token * unfinish_flag.unsqueeze(1) + eos * (1 - unfinish_flag).unsqueeze(1)\n",
+        "            decoder_input_ids = torch.cat([decoder_input_ids, next_token], dim=1)\n",
+        "            unfinish_flag = unfinish_flag * (next_token != eos).squeeze(1)\n",
+        "\n",
+        "            prev_attn_context = attn_context\n",
+        "            cache = (encoder_outputs, current_h_dec, current_c_dec, prev_attn_context)\n",
+        "\n",
+        "            if unfinish_flag.max() == 0:\n",
+        "                break\n",
+        "\n",
         "\n",
         "            ######\n",
         "        return decoder_input_ids\n"
@@ -1184,7 +1261,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "widgets": {
